# HouShop

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: build-windows.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: gen_icons.py
src-tauri/migrations/20240101000001_init/: down.sql  up.sql
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/commands/: auth.rs  customer.rs  dashboard.rs  inventory.rs  mod.rs  printer.rs  product.rs  reservation.rs  returns.rs  sale.rs
src-tauri/src/models/: mod.rs
src/components/: BarcodePrintModal.tsx  ConfirmDialog.tsx  CustomSelect.tsx  DocumentPrintModal.tsx  Invoice.tsx  Layout.tsx  SaleCompletionModal.tsx  ShippingLabel.tsx  UpdateBanner.tsx
src/hooks/: useAuth.tsx  useBarcodeScanner.ts  useBranding.tsx  useUpdateCheck.ts
src/i18n/: context.tsx  index.ts  translations.ts
src/lib/: documentRenderer.ts  labelRenderer.ts  tsplPrinter.ts  types.ts
src/pages/: AddCustomer.tsx  AddProduct.tsx  Checkout.tsx  Customers.tsx  Dashboard.tsx  Login.tsx  Logs.tsx  POS.tsx  ProductEvaluation.tsx  Products.tsx  Profile.tsx  Reservations.tsx  Returns.tsx  Sales.tsx
src/theme/: context.tsx
