[package]
name = "shop-management-app"
version = "1.0.0"
description = "Shop Management & POS System"
authors = ["you"]
edition = "2021"

[lib]
name = "shop_management_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.16"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Windows-only: RAW data injection to the printer via the Spooler API
# (OpenPrinterW / StartDocPrinterW with pDatatype = "RAW" / WritePrinter).
# Uses `windows-sys` (raw FFI) rather than the `windows` wrapper crate: the
# Spooler functions are 1:1 with the C headers here (no Param/Result/handle
# wrappers). `Win32_Graphics_Gdi` is required because PRINTER_DEFAULTSW (which
# has a *mut DEVMODEW field) is cfg-gated behind it in windows-sys. Gated to
# cfg(windows) so the project still compiles on the macOS dev machine.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Printing",
] }
